# rich-deploy

./: .gitignore  README.md  licmgr.toml  pyproject.toml
client/: get_fingerprint.py
client_sdk/: bootstrap.py  verify_license.py
docs/: QA.md  design_discussion_summary.md  dongle_architecture.md  identifier_risk_report.md  image_collision_and_spoofing.md  mac_collision_analysis.md  six_hats_analysis.md  tpm_trends_and_integration.md
licmgr/: plugin.py  tui.py
tools/: cmd_export.py  cmd_keys.py  cmd_license.py  cmd_project.py  generate_keys.py  main.py  public_key.pem  sign_license.py
tools/db/: crud.py  engine.py  models.py
