[project]
name = "rich-deploy"
version = "0.1.0"
description = "Cross-project tooling utilities for offline license signing"
requires-python = ">=3.10,<3.14"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
# 授權簽章與驗證
cryptography = ">=46.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
